add project structure